# Fixes #
- Fixed an error with the Harpy Anklet.